--- a/.bin/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.bin/.config/gtk-2.0/gtkfilechooser.ini
@@ -7,5 +7,5 @@ GeometryY=204
 GeometryWidth=888
 GeometryHeight=640
 SortColumn=modified
-SortOrder=ascending
+SortOrder=descending
 StartupMode=recent
