--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -6,12 +6,16 @@ name: Dotfiles CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
+    permissions:
+      actions: write
+      checks: write
+      contents: write
     # The type of runner that the job will run on
     runs-on: macos-latest
 
