--- a/.bin/.gitconfig
+++ b/.bin/.gitconfig
@@ -25,3 +25,6 @@
 [interactive]
   diffFilter = delta --color-only 
 
+[filter "clean_ipynb"]
+  clean = jq --indent 1 --monochrome-output '. + if .metadata.git.suppress_outputs | not then { cells: [.cells[] | . + if .cell_type == \"code\" then { outputs: [], 　execution_count: null } else {} end ] } else {} end'
+  smudge = cat
