--- a/.bin/.config/lazygit/config.yml
+++ b/.bin/.config/lazygit/config.yml
@@ -18,3 +18,9 @@ refresher:
   refreshInterval: 3
 os:
   editCommand: "nvim"
+customCommands:
+  - key: "C"
+    context: "files"
+    command: "git commit -v -t ~/.config/git/commit_template_with_prompt.txt"
+    description: "Commit changes using git editor"
+    subprocess: true
