--- a/.bin/.config/mise/config.toml
+++ b/.bin/.config/mise/config.toml
@@ -3,6 +3,6 @@ go = '1.21.5'
 node = "21"
 python = "3.12.2"
 yarn = "1.22.19"
-neovim = "latest"
+neovim = "0.10.2"
 ghc = "9.6.5"
 deno = "latest"
