update: home-manger

--- a/conf/.config/mise/config.toml
+++ b/conf/.config/mise/config.toml
@@ -1,8 +1,1 @@
-[tools]
-go = '1.21.5'
-node = "latest"
-python = "3.12.2"
-yarn = "1.22.19"
-neovim = "0.10.2"
-ghc = "9.6.5"
-deno = "latest"
+/nix/store/l0f3nvq880y75l5z724jd9msvrg8cn73-home-manager-files/.config/mise/config.toml
