--- a/conf/.config/aerospace/aerospace.toml
+++ b/conf/.config/aerospace/aerospace.toml
@@ -56,7 +56,9 @@ inner.horizontal = 10
 inner.vertical =   10
 outer.left =       10
 outer.bottom =     10
-outer.top =        [{ monitor.VG258 = 30},{monitor.BenQ GW2480 = 30}, 10 ]
+outer.top =        10
+# outer.top =        [{ monitor.VG258 = 30},{monitor.BenQ GW2480 = 30}, 10 ]
+
 
 outer.right =      10
 
