--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ conf/.claude/todos
 # Safari GitHub profile (contains personal auth data)
 conf/.config/nvim/safari-github-profile/
 conf/.config/google-chrome/Default
+conf/.claude/shell-snapshots
+conf/.config/composer
