--- a/conf/.config/tmux/tmux-wezterm.conf
+++ b/conf/.config/tmux/tmux-wezterm.conf
@@ -16,7 +16,7 @@ unbind-key -a -T root
 unbind-key -a -T prefix
 unbind-key -a -T copy-mode
 unbind-key -a -T copy-mode-vi
-unbind-key -a
+# unbind-key -a
 
 # プレフィックスキー設定
 set -g prefix C-q
@@ -183,3 +183,8 @@ bind '?' list-keys
 
 # システムクリップボード連携
 bind C-p paste-buffer
+
+bind e run-shell 'tmux split-window -v -l 20 \
+  -c "#{pane_current_path}" \
+  "editprompt --editor nvim --target-pane #{pane_id}"'
+
