--- a/conf/.config/tmux/tmux-wezterm.conf
+++ b/conf/.config/tmux/tmux-wezterm.conf
@@ -36,6 +36,10 @@ bind -n M-] next-window
 bind -n C-M-h previous-window
 bind -n C-M-l next-window
 
+# Neovim telescope buffer navigation support
+bind-key -n C-Tab send-keys Escape [27\;5\;9~
+bind-key -n C-S-Tab send-keys Escape [27\;6\;9~
+
 # プレフィックス付きの代替（確実に動作）
 bind p previous-window
 bind n next-window
@@ -188,3 +192,6 @@ bind e run-shell 'tmux split-window -v -l 20 \
   -c "#{pane_current_path}" \
   "editprompt --editor nvim --target-pane #{pane_id}"'
 
+bind -n M-q run-shell 'tmux split-window -v -l 20 \
+  -c "#{pane_current_path}" \
+  "editprompt --editor '\''nvim -c \"startinsert\"'\'' --target-pane #{pane_id}"'
