--- a/conf/.config/tmux/tmux-wezterm.conf
+++ b/conf/.config/tmux/tmux-wezterm.conf
@@ -36,10 +36,6 @@ bind -n M-] next-window
 bind -n C-M-h previous-window
 bind -n C-M-l next-window
 
-# Neovim telescope buffer navigation support
-bind-key -n C-Tab send-keys Escape [27\;5\;9~
-bind-key -n C-S-Tab send-keys Escape [27\;6\;9~
-
 # プレフィックス付きの代替（確実に動作）
 bind p previous-window
 bind n next-window
@@ -182,7 +178,7 @@ set -g mode-style "bg=#ae8b2d,fg=#1e1e1e"
 # =============================================================================
 # その他の設定
 # =============================================================================
-bind r source-file ~/.config/tmux/tmux-wezterm.conf \; display-message "Config reloaded!"
+bind r source-file ~/.config/tmux/tmux-wezterm.conf \; display-message "Config reloaded tmxwezterm.conf"
 bind '?' list-keys
 
 # システムクリップボード連携
