--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,20 @@ conf/.claude/ide/51260.lock
 conf/.claude/ide
 .serena
 .claude/logs
+conf/.config/gtk-3.0
+conf/.config/go/telemetry/local
+conf/.config/evolution/sources
+conf/.config/environment.d
+conf/.config/dconf
+conf/.config/pulse
+conf/.config/systemd/user
+conf/.config/tiling-assistant
+conf/.config/.gsd-keyboard.settings-ported
+conf/.config/GNOME-xdg-terminals.list
+conf/.config/gnome-initial-setup-done
+conf/.config/ibus-mozc-gnome-initial-setup-done
+conf/.config/ubuntu-xdg-terminals.list
+conf/.config/user-dirs.dirs
+conf/.config/user-dirs.locale
+conf/.config/xdg-terminals.list
+conf/.config/ibus/bus
