--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ conf/.claude/history.jsonl
 conf/.claude/plugins
 .claude/settings.local.json
 .claude/settings.local.json
+conf/.claude/debug
+conf/.claude/file-history/5e1dee8e-f212-47d1-b309-35a22c8c1638/12e7eadb34813b3b@v1
