--- a/conf/.config/tmux/tmux-wezterm.conf
+++ b/conf/.config/tmux/tmux-wezterm.conf
@@ -11,6 +11,9 @@ set -g escape-time 0
 set -g mouse on
 setw -g mode-keys vi
 
+# 拡張キーサポート (Ctrl+Tab等のモダンなキーコンビネーション)
+set -g extended-keys on
+
 # 全デフォルトキーバインドを削除（全キーテーブル）
 unbind-key -a -T root
 unbind-key -a -T prefix
@@ -165,7 +168,7 @@ set -g pane-active-border-style "fg=#ae8b2d"
 set -g status-left-length 90
 set -g status-right-length 90
 set -g status-left "#[bg=#ae8b2d,fg=#1e1e1e,bold] #S #[bg=#1e1e1e,fg=#ae8b2d]"
-set -g status-right "#[fg=#5c6d74]#[bg=#5c6d74,fg=#ffffff] %Y-%m-%d(%a) %H:%M "
+set -g status-right ""
 set -g status-interval 1
 
 # メッセージ設定
@@ -190,4 +193,4 @@ bind e run-shell 'tmux split-window -v -l 20 \
 
 bind -n M-q run-shell 'tmux split-window -v -l 20 \
   -c "#{pane_current_path}" \
-  "editprompt --editor '\''nvim -c \"startinsert\"'\'' --target-pane #{pane_id}"'
+
