--- a/conf/.config/tmux/tmux-wezterm.conf
+++ b/conf/.config/tmux/tmux-wezterm.conf
@@ -187,10 +187,17 @@ bind '?' list-keys
 # システムクリップボード連携
 bind C-p paste-buffer
 
-bind e run-shell 'tmux split-window -v -l 20 \
-  -c "#{pane_current_path}" \
-  "editprompt --editor nvim --target-pane #{pane_id}"'
+# bind e run-shell 'tmux split-window -v -l 20 \
+#   -c "#{pane_current_path}" \
+#   "editprompt --editor nvim --target-pane #{pane_id}"'
 
-bind -n M-q run-shell 'tmux split-window -v -l 20 \
-  -c "#{pane_current_path}" \
+# bind -n M-q run-shell 'tmux split-window -v -l 20 \
+#   -c "#{pane_current_path}" \
+
+bind -n M-q run-shell '\
+  editprompt resume --target-pane #{pane_id} || \
+  tmux split-window -v -l 10 -c "#{pane_current_path}" \
+    "editprompt open --editor nvim --always-copy --target-pane #{pane_id}"'
+  
+
 
