--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,20 +35,20 @@ jobs:
       - name: Print disk usage
         run: df -h
 
-  build-linux:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Setup Nix
-        uses: ./.github/actions/setup-nix
-        with:
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-          skipPush: ${{ github.event_name == 'pull_request' }}
-
-      - name: Build homeConfigurations (linux)
-        run: nix build --show-trace --no-link .#homeConfigurations.myHomeConfig-linux.activationPackage
-
-      - name: Print disk usage
-        run: df -h
+  # build-linux:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v5
+  #
+  #     - name: Setup Nix
+  #       uses: ./.github/actions/setup-nix
+  #       with:
+  #         authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+  #         skipPush: ${{ github.event_name == 'pull_request' }}
+  #
+  #     - name: Build homeConfigurations (linux)
+  #       run: nix build --show-trace --no-link .#homeConfigurations.myHomeConfig-linux.activationPackage
+  #
+  #     - name: Print disk usage
+  #       run: df -h
