update: ghosttyのテーマをAyu Mirageに変更

--- a/conf/.config/ghostty/config
+++ b/conf/.config/ghostty/config
@@ -7,11 +7,13 @@
 font-family = HackGen Console NF
 font-size = 14
 
+theme = Ayu Mirage
+
 # ============================================================================
 # Window Settings
 # ============================================================================
 # ウィンドウの不透明度 (0.0 - 1.0)
-background-opacity = 0.55
+background-opacity = 1
 
 # ウィンドウのパディング
 window-padding-x = 5
@@ -29,8 +31,7 @@ title = Ghostty
 
 # ============================================================================
 # Cursor Settings
-# ============================================================================
-cursor-style = block
+# ============================================================================ cursor-style = block
 cursor-style-blink = true
 
 # ============================================================================
@@ -38,13 +39,6 @@ cursor-style-blink = true
 # ============================================================================
 # スクロールバック履歴 (10000行分、約10MB程度を想定)
 scrollback-limit = 10485760
-
-# ============================================================================
-# Color Scheme: AdventureTime
-# ============================================================================
-# プライマリカラー
-background = #1f1d45
-foreground = #f8dcc0
 
 # カーソルカラー
 cursor-color = #efbf38
@@ -137,5 +131,4 @@ shell-integration = detect
 # macOSでのウィンドウテーマ
 window-theme = auto
 
-theme = "TokyoNight"
 
