update: add happy663 as reviewer for update workflow

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -74,3 +74,4 @@ jobs:
           delete-branch: true
           body: ${{ steps.pr-body-output.outputs.body }}
           token: ${{ steps.app-token.outputs.token }}
+          reviewrs: happy663
