feat: Add @openai/codex to devDependencies

--- a/conf/.config/nix/node-pkgs/package.json
+++ b/conf/.config/nix/node-pkgs/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@zed-industries/claude-code-acp": "^0.12.4",
     "editprompt": "latest",
-    "@anthropic-ai/claude-code": "latest"
+    "@anthropic-ai/claude-code": "latest",
+    "@openai/codex": "latest"
   }
 }
